ajuste paddind top

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     />
 
     <!-- Texto superpuesto en dos columnas -->
-    <div class="absolute inset-0 flex items-start justify-between pt-24 px-8">
+    <div class="absolute inset-0 flex items-start justify-between pt-8 md:pt-24 px-8">
       
       <!-- Lado izquierdo -->
       <div class=" px-4 py-3 rounded-lg shadow-md text-[#4A4A4A] text-left font-semibold text-xl md:text-3xl leading-">
