ajuste color menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     <!-- Botón hamburguesa (solo visible en móvil) -->
     <button id="menu-btn" class="text-white md:hidden focus:outline-none z-20">
       <!-- Icono hamburguesa -->
-      <svg id="icon-open" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
-        <path d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
+      <!-- Icono hamburguesa -->
+<svg id="icon-open" class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+</svg>
+
       <!-- Icono de cerrar -->
       <svg id="icon-close" class="w-6 h-6 fill-current hidden" viewBox="0 0 24 24">
         <path d="M6 6L18 18M6 18L18 6" stroke="white" stroke-width="2" stroke-linecap="round" />
