adicion de secciones team y contacto en pag principal

--- a/index.html
+++ b/index.html
@@ -259,6 +259,111 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
     class="absolute bottom-16 size-24 md:bottom-16 md:size-32 mx-auto z-10 max-w-[200px]"
   />
 </section>
+
+<section class="w-full bg-[#336699] py-16 px-4">
+  <!-- Título -->
+  <h2 class="text-center text-white text-3xl font-semibold mb-12">Team</h2>
+
+  <!-- Grid del equipo -->
+  <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 text-white">
+
+    <!-- Tarjeta 1 -->
+    <div class="flex items-start gap-4">
+      <!-- Imagen -->
+      <div class="w-24 h-24 bg-gray-200 rounded-tr-[50px] rounded-bl-[50px] flex items-center justify-center text-sm text-gray-500">
+        Photo Diana
+      </div>
+      <!-- Info -->
+      <div class="flex flex-col justify-between">
+        <h3 class="text-lg font-semibold">Diana Hernandez</h3>
+        <p class="text-sm mt-2">
+          Lorem ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
+        <div class="w-12 h-2 bg-[#E3BE03] mt-4 rounded-full"></div>
+      </div>
+    </div>
+
+    <!-- Tarjeta 2 -->
+    <div class="flex items-start gap-4 flex-row-reverse text-right">
+      <!-- Imagen -->
+      <div class="w-24 h-24 bg-gray-200 rounded-tl-[50px] rounded-br-[50px] flex items-center justify-center text-sm text-gray-500">
+        Photo Jorge
+      </div>
+      <!-- Info -->
+      <div class="flex flex-col justify-between">
+        <h3 class="text-lg font-semibold">Jorge Brozicevich</h3>
+        <p class="text-sm mt-2">
+          Lorem ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
+        <div class="w-12 h-2 bg-[#E3BE03] mt-4 ml-auto rounded-full"></div>
+      </div>
+    </div>
+
+    <!-- Tarjeta 3 -->
+    <div class="flex items-start gap-4">
+      <!-- Imagen -->
+      <div class="w-24 h-24 bg-gray-200 rounded-tr-[50px] rounded-bl-[50px] flex items-center justify-center text-sm text-gray-500">
+        Photo Fidel
+      </div>
+      <!-- Info -->
+      <div class="flex flex-col justify-between">
+        <h3 class="text-lg font-semibold">Fidel Ramirez Ortiz</h3>
+        <p class="text-sm mt-2">
+          Lorem ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
+        <div class="w-12 h-2 bg-[#E3BE03] mt-4 rounded-full"></div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+<section class="relative w-full bg-[#E3BE03] py-12 px-4 text-[#336699] overflow-hidden">
+  <!-- Imagen izquierda centrada vertical -->
+  <img 
+    src="images/deco-left.svg" 
+    alt="Decoración izquierda" 
+    class="absolute left-0 top-1/2 -translate-y-1/2 z-0 w-32 md:w-40 pointer-events-none"
+  />
+
+  <!-- Imagen derecha alineada abajo -->
+  <img 
+    src="images/deco-right.svg" 
+    alt="Decoración derecha" 
+    class="absolute right-0 bottom-0 z-0 w-24 md:w-32 pointer-events-none"
+  />
+
+  <!-- Contenido principal -->
+  <div class="relative z-10 max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+    
+    <!-- Título -->
+    <div class="flex justify-center md:justify-start">
+      <h2 class="text-2xl font-semibold text-center md:text-left">Contact Us</h2>
+    </div>
+
+    <!-- Datos de contacto -->
+    <div class="space-y-4 text-sm md:text-base">
+      <div class="flex items-center gap-3">
+        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M21 8a2 2 0 0 0-2-2h-2a1 1 0 0 0-1 1v1H8V7a1 1 0 0 0-1-1H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h2a1 1 0 0 0 1-1v-1h8v1a1 1 0 0 0 1 1h2a2 2 0 0 0 2-2V8z"/></svg>
+        <span>hello@eabuencamino.com</span>
+      </div>
+
+      <div class="flex items-center gap-3">
+        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M3 5a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5z"/><path d="M7 7h10v2H7z"/></svg>
+        <span>(+1) 505-600-1586</span>
+      </div>
+
+      <div class="flex items-center gap-3">
+        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2a7 7 0 0 1 7 7c0 5.25-7 13-7 13s-7-7.75-7-13a7 7 0 0 1 7-7z"/><circle cx="12" cy="9" r="2.5"/></svg>
+        <span>3539 THAXTON AVE SE - 87106<br/>Albuquerque - New Mexico</span>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 <!-- Hero Section  -->
   <section class="text-center py-16 px-4 bg-gradient-to-r from-blue-100 to-purple-100">
     <h1 class="text-4xl font-bold text-blue-800 mb-4">Ready for a Change?</h1>
