Ajuste de logo y adicion de imagenes de servicios en version movil

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Logo + Título -->
     <div class="flex items-center space-x-4">
-      <img src="images/logo.svg" alt="Logo" class="h-12 w-12" />
+      <img src="images/png/logoEABC.png" alt="Logo" class="h-18 w-9" />
       <div class="text-white leading-tight">
         <h1 class="text-xl font-light">Ea,<br><span class="font-semibold">BuenCamino</span></h1>
         <p class="text-sm">Guía terapéutica para el bienestar integral</p>
@@ -104,11 +104,11 @@
   class="relative bg-[#F8F4E3] text-white  px-4 flex justify-center  w-full md:w-4/5 lg:w-3/4 xl:w-2/3 mx-auto h-32 md:h-40"
   style="background-image: url('images/svg/wave-bg.svg'); background-size: contain;background-repeat: no-repeat; background-position: center; ">
   
-  <div class="  flex justify-center  items-center md:w-full  ">
-    <h2 class="pl-4 pr-8  text-sm md:text-3xl font-semibold">¿Listo para un cambio?</h2>
+  <div class="  flex justify-center  items-center md:w-full  gap-3 flex-wrap md:flex-nowrap">
+    <h2 class="pl-4 pr-2  text-sm md:text-3xl font-semibold ">¿Listo para un cambio?</h2>
     <a 
       href="#contact" 
-      class="inline-block bg-[#336699] hover:bg-[#2b5c88] text-white text-sm md:text-base font-medium px-6 py-3 rounded-full shadow transition"
+      class="inline-block bg-[#336699] hover:bg-[#2b5c88] text-white text-sm md:text-base font-medium px-4 md:px-6 py-2 md:py-3 rounded-full shadow transition whitespace-nowrap"
     >
       Reserva consulta gratis
     </a>
@@ -286,10 +286,17 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
           Encuentra un espacio personal y seguro para explorar tus pensamientos, emociones y experiencias de vida con apoyo y comprensión.
         </p>
 
+         <!-- Imagen solo en móvil -->
+        <img 
+          src="images/png/terapiaIndMov.png" 
+          alt="Imagen móvil Terapia Individual" 
+          class="block md:hidden  mx-auto"
+        />
+
         <!-- Botón -->
-        <div class="text-left md:text-left pt-16 md:pt-8">
+        <div class="text-left md:text-left pt-8 md:pt-8">
           <a href="#contact" class="inline-block bg-[#E3BE03] text-[#336699] font-semibold px-5 py-2 rounded-full w-fit hover:bg-yellow-400 transition">
-            Make an appointment
+             Reserva una Cita
           </a>
         </div>
       </div>
@@ -335,13 +342,13 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
         <img 
           src="images/png/terapiaFamMob.png" 
           alt="Imagen móvil Terapia Familiar" 
-          class="block md:hidden  ml-auto"
+          class="block md:hidden  mx-auto"
         />
 
         <!-- Botón -->
-        <div class="text-right md:text-right pt-16 md:pt-8">
+        <div class="text-right md:text-right pt-8 md:pt-8">
           <a href="#contact" class="inline-block bg-[#E3BE03] text-[#336699] font-semibold px-5 py-2 rounded-full w-fit hover:bg-yellow-400 transition">
-            Make an appointment
+           Reserva una Cita
           </a>
         </div>
       </div>
@@ -385,10 +392,17 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
          Este es un proceso íntimo y transformador para reconectar con su esencia, desde la compasión, la curiosidad y una apertura genuina.
         </p>
 
+         <!-- Imagen solo en móvil -->
+        <img 
+          src="images/png/terapiaAutoMov.png" 
+          alt="Imagen móvil Terapia Autodescubrimiento" 
+          class="block md:hidden  mx-auto"
+        />
+
         <!-- Botón -->
         <div class="text-left md:text-left pt-16 md:pt-8">
           <a href="#contact" class="inline-block bg-[#E3BE03] text-[#336699] font-semibold px-5 py-2 rounded-full w-fit hover:bg-yellow-400 transition">
-            Make an appointment
+            Reserva una Cita
           </a>
         </div>
       </div>
