--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-[#F8F4E3] text-gray-800">
 
   <!-- Header -->
-  <header class="bg-[#78ACCF] px-6 py-4">
+  <header class="sticky top-0 z-50 bg-[#78ACCF] px-6 py-4">
   <div class="max-w-6xl mx-auto flex justify-between items-center relative">
 
     <!-- Logo + Título -->
