--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   class="relative bg-[#F8F4E3] text-white  px-4 flex justify-center  w-full md:w-4/5 lg:w-3/4 xl:w-2/3 mx-auto h-32 md:h-40"
   style="background-image: url('images/svg/wave-bg.svg'); background-size: contain;background-repeat: no-repeat; background-position: center; ">
   
-  <div class="  flex justify-center  items-center md:w-full  gap-3 flex-wrap md:flex-nowrap">
+  <div class="  flex justify-center  items-center md:w-full  gap-2 flex-wrap md:flex-nowrap">
     <h2 class="pl-4 pr-2  text-sm md:text-3xl font-semibold ">¿Listo para un cambio?</h2>
     <a 
       href="#contact" 
@@ -262,9 +262,11 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
 
 
 <!-- Seccion de servicios -->
+ 
 
 <section class="w-full bg-cover bg-center px-4 py-12" style="background-image: url('images/jpg/section-background.jpg');">
-  
+  <!-- Línea decorativa (puede colocarse antes o después del contenido del hijo) -->
+<div class="h-[10px] md:w-[80%] mx-auto bg-[#E3BE03]/85"></div>
   <!-- Contenedor hijo 1 -->
   <div class="w-full md:w-[80%] mx-auto">
 
