--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
   class="relative bg-[#F8F4E3] text-white  px-4 flex justify-center  w-full md:w-4/5 lg:w-3/4 xl:w-2/3 mx-auto h-32 md:h-40"
   style="background-image: url('images/svg/wave-bg.svg'); background-size: contain;background-repeat: no-repeat; background-position: center; ">
   
-  <div class="  flex justify-center  items-center md:w-full  gap-2 flex-wrap md:flex-nowrap">
-    <h2 class="pl-4 pr-2  text-sm md:text-3xl font-semibold ">¿Listo para un cambio?</h2>
+  <div class="  flex justify-center  items-center md:w-full  gap-2 md:gap-4 flex-wrap md:flex-nowrap">
+    <h2 class=" pl-1 pr-1 md:pl-12 md:pr-2  text-sm md:text-3xl font-semibold ">¿Listo para un cambio?</h2>
     <a 
       href="#contact" 
-      class="inline-block bg-[#336699] hover:bg-[#2b5c88] text-white text-sm md:text-base font-medium px-4 md:px-6 py-2 md:py-3 rounded-full shadow transition whitespace-nowrap"
+      class="inline-block bg-[#336699] hover:bg-[#2b5c88] text-white text-sm md:text-base font-medium px-2 md:px-6 py-2 md:py-3 rounded-full shadow transition whitespace-nowrap"
     >
       Reserva consulta gratis
     </a>
