ajuste de colore llamado a la accion en pie de pagina

--- a/index.html
+++ b/index.html
@@ -586,10 +586,10 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
 <!-- Hero Section  -->
   <section class="text-center py-16 px-4 bg-gradient-to-r from-[#E3BE03] to-[#336699]">
     <h1 class="text-4xl font-bold text-[#F8F4E3] mb-4">Listo Para Un Cambio?</h1>
-    <p class="text-lg text-gray-700 mb-6">
-      Shifting Life Perspectives to Finding Balance
+    <p class="text-lg text-[#F8F4E3] mb-6">
+      Cambiar la perspectiva de la vida para encontrar el equilibrio
     </p>
-    <a href="#contact" class="bg-[#336699] text-white px-6 py-3 rounded-xl hover:bg-blue-700 transition">
+    <a href="#contact" class="bg-[#336699]/80 text-[#F8F4E3] px-6 py-3 rounded-xl hover:bg-[#E3BE03] hover:text-[#336699] transition">
       Reserva Consulta Gratis
     </a>
   </section>
