ajuste de ancho en version movil de la seccion servicios

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
  
   
   
-  <section class="py-12 px-4  ">
+  <section class="py-12  ">
   
 <div class="w-full max-w-[70%] mx-auto relative flex justify-center items-center bg-[#336699]">
    <!-- Imagen SVG de fondo -->
@@ -290,9 +290,9 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
 <!-- Seccion de servicios -->
  
 
-<section class="w-full max-w-[70%] mx-auto border bg-cover bg-center  py-12" style="background-image: url('images/jpg/section-background.jpg');">
+<section class="w-full md:w-[70%] lg:w-[70%] xl:w-[70%] mx-auto border bg-cover bg-center  py-12" style="background-image: url('images/jpg/section-background.jpg');">
   <!-- Línea decorativa (puede colocarse antes o después del contenido del hijo) -->
-<div class="h-[10px] md:w-[70%] mx-auto bg-[#E3BE03]/85"></div>
+<div class="h-[10px] md:w-[80%] mx-auto bg-[#E3BE03]/85"></div>
   <!-- Contenedor hijo 1 -->
   <div class="w-full md:w-[80%] mx-auto">
 
