adicin de pag navegacin

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
     <!-- Menú de navegación -->
     <nav id="menu" class="absolute top-full left-0 w-full md:static md:w-auto md:flex md:space-x-6 bg-[#F8F4E3] md:bg-transparent text-[#336699] md:text-white px-6 py-4 md:p-0 hidden md:block shadow-md md:shadow-none z-10">
-      <a href="#about" class="block py-2 md:py-0 hover:underline">About Us</a>
-      <a href="#services" class="block py-2 md:py-0 hover:underline">Services</a>
-      <a href="#team" class="block py-2 md:py-0 hover:underline">Team</a>
-      <a href="#contact" class="block py-2 md:py-0 hover:underline">Contact</a>
+      <a href="about.html" class="block py-2 md:py-0 hover:underline">Sobre Nosotross</a>
+      <a href="#services" class="block py-2 md:py-0 hover:underline">Servicios</a>
+      <a href="#team" class="block py-2 md:py-0 hover:underline">Equipo</a>
+      <a href="#contact" class="block py-2 md:py-0 hover:underline">Contacto</a>
     </nav>
 
   </div>
