ajuste seccin herramientas

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-[#F8F4E3] text-gray-800">
 
   <!-- Header -->
-  <header class="sticky top-0 z-50 bg-[#78ACCF] px-6 py-4">
+  <header class="sticky top-0 z-50 bg-[#336699] px-6 py-4">
   <div class="max-w-6xl mx-auto flex justify-between items-center relative">
 
     <!-- Logo + Título -->
@@ -74,7 +74,7 @@
     </div>
 
     <!-- Capa transparente blanca al 50% -->
-    <div class="absolute inset-0 bg-white/30 z-10"> </div>
+    <div class="absolute inset-0 bg-white/20 z-10"> </div>
 
     <!-- Texto superpuesto (encima de la capa) -->
     <!-- <div class="absolute inset-0 flex items-start justify-between pt-8 md:pt-24 px-4 z-20">
@@ -158,11 +158,12 @@ class="relative bg-[#F8F4E3] text-white  px-4 flex justify-center  w-full  md:w-
 
 </section>
 
-<!-- Seccion de  -->
+<!-- Seccion de  background-image: url('images/jpg/fondo-seccion.jpg');-->
  <!-- Sección raíz con fondo -->
+
 <section 
 class="w-full py-12 px-4 bg-cover bg-center"
-style="background-image: url('images/jpg/fondo-seccion.jpg');">
+style="">
 
 <!-- Capa blanca semitransparente -->
 <section class="relative md:w-[70%] lg:w-[70%] xl:w-[70%] mx-auto bg-white/90 py-0 top-0 px-4 overflow-hidden">
@@ -262,7 +263,7 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
   
   <section class="py-12  ">
   
-<div class="w-full max-w-[70%] mx-auto relative flex justify-center items-center bg-[#336699]">
+<div class="w-full max-w-[70%] mx-auto relative flex justify-center items-center bg-[#F8F4E3]">
    <!-- Imagen SVG de fondo -->
   <img 
     src="images/svg/sp2-hourglass.svg" 
@@ -290,7 +291,7 @@ style="background-image: url('images/jpg/fondo-seccion.jpg');">
 <!-- Seccion de servicios -->
  
 
-<section class="w-full md:w-[70%] lg:w-[70%] xl:w-[70%] mx-auto border bg-cover bg-center  py-12" style="background-image: url('images/jpg/section-background.jpg');">
+<section class="w-full md:w-[70%] lg:w-[70%] xl:w-[70%] mx-auto border bg-cover bg-center  py-12" style="background-image: url('images/jpg/section-background.jpg'); width: 80%;">
   <!-- Línea decorativa (puede colocarse antes o después del contenido del hijo) -->
 <div class="h-[10px] md:w-[80%] mx-auto bg-[#E3BE03]/85"></div>
   <!-- Contenedor hijo 1 -->
