--- a/index.html
+++ b/index.html
@@ -101,41 +101,55 @@
 
 <!--  -->
 
-<section class="h-40 w-full md:w-[70%] lg:w-[70%] xl:w-[70%] max-w-[80%] mx-auto justify-center relative overflow-hidden">
-  <!-- Imagen de fondo -->
-  <div class="absolute inset-0 bg-no-repeat bg-cover bg-center z-0 mx-auto h-40"
-       style="background-image: url('images/svg/wave-bg.svg');">
+<!-- Sección raíz -->
+<section class="w-full md:w-[70%] lg:w-[70%] xl:w-[70%] max-w-[80%] mx-auto h-[120px] md:h-[160px] relative flex items-center justify-center  overflow-hidden">
+
+  <!-- Fondo para móvil -->
+  <div class="absolute inset-0 bg-no-repeat bg-cover bg-center md:hidden"
+       style="background-image: url('images/svg/fondo-movil.svg'); z-index: 0;">
   </div>
 
-  <!-- Contenedor principal -->
-  <div class="w-full  h-full relative z-2">
-  
-    <div class=" z-50  h-full flex justify-center md:justify-around items-center  w-full  mx-auto gap-2 md:gap-4 flex-wrap md:flex-nowrap">
-    <h2 class=" pl-1 pr-1 md:pl-12 md:pr-2 text-[#F8F4E3]  text-sm md:text-3xl font-semibold ">¿Listo para un cambio?</h2>
-    <a 
-      href="#contact" 
-      class="inline-block bg-[#336699] hover:bg-[#2b5c88] text-[#F8F4E3] text-sm md:text-xl font-medium px-2 md:px-6 py-2 md:py-3 rounded-full shadow transition whitespace-nowrap"
-    >
-      Reserva consulta gratis
-    </a>
+  <!-- Fondo para escritorio -->
+  <div class="absolute inset-0 bg-no-repeat bg-cover bg-center hidden md:block"
+       style="background-image: url('images/svg/fondo-escritorio.svg'); z-index: 0;">
   </div>
 
+  <!-- Contenido -->
+  <div class="w-full max-w-7xl flex items-center justify-between h-full relative z-10">
 
+    <!-- Imagen izquierda -->
+    <img src="images/svg/left-icon.svg" alt="Decoración izquierda"
+         class="h-[90%] object-contain" />
+
+    <!-- Texto y botón centrados -->
+    <div class="flex items-center gap-4 text-white text-center mx-auto">
+      <span class="text-sm md:text-lg font-semibold whitespace-nowrap">
+        ¿Listo para un cambio?
+      </span>
+      <a href="#contact" class="bg-[#336699] text-white px-4 py-2 rounded-full text-xs md:text-sm hover:bg-[#2b5c88] transition whitespace-nowrap">
+        Reservar consulta gratis
+      </a>
+    </div>
+
+    <!-- Imagen derecha -->
+    <img src="images/svg/right-icon.svg" alt="Decoración derecha"
+         class="h-a object-contain" />
 
   </div>
 </section>
+
 
 
 
   
 <!--Yellow Brake Line -->
 <section
-class="relative bg-[#F8F4E3] text-white  px-4 flex justify-center  w-full  md:w-[70%] lg:w-[70%] xl:w-[70%] mx-auto h-16 md:h-40"
+class="relative bg-[#F8F4E3] text-white  flex justify-center  w-[80%]  md:w-[70%] lg:w-[70%] xl:w-[70%] mx-auto h-16 md:h-40"
   style="background-image: url('images/svg/yellow-br-line.svg'); background-size: contain;background-repeat: no-repeat; background-position: center; ">  
 </section>
 
 <!-- Sección de imagen water mountain banner -->
-<section class="relative w-full bg-[#F8F4E3] py-12 px-4">
+<section class="relative w-[80%]  md:w-[70%] lg:w-[70%] xl:w-[70%] mx-auto bg-[#F8F4E3] py-12 mx-auto">
   
   <!-- Contenedor del texto -->
   <div class="relative z-10 max-w-4xl mx-auto  rounded-lg p-6 text-center text-[#336699] shadow-md md:z-10">
@@ -160,7 +174,7 @@ class="relative bg-[#F8F4E3] text-white  px-4 flex justify-center  w-full  md:w-
 
 <section 
 class="w-full py-12 px-4 bg-cover bg-center"
-style="">
+>
 
 <!-- Capa blanca semitransparente -->
 <section class="relative md:w-[70%] lg:w-[70%] xl:w-[70%] mx-auto bg-white/90 py-0 top-0 px-4 overflow-hidden">
@@ -211,14 +225,14 @@ style="">
   
   <!-- SVG izquierda -->
   <img 
-    src="images/svg/left-deco-arrow.svg" 
+    src="images/svg/left-deco-arrow-2.svg" 
     alt="Decoración izquierda" 
     class="absolute left-0 top-0 h-full max-w-[40%] md:max-w-xs object-contain z-0 pointer-events-none" 
   />
 
   <!-- SVG derecha -->
   <img 
-    src="images/svg/right-deco-arrow.svg" 
+    src="images/svg/right-deco-arrow-2.svg" 
     alt="Decoración derecha" 
     class="absolute right-0 top-0 h-full max-w-[40%] md:max-w-xs object-contain z-0 pointer-events-none" 
   />
@@ -548,17 +562,19 @@ style="">
         <span>(+1) 505-600-1586</span>
       </div>
 
-      <!-- Dirección -->
+      <!-- Correo -->
       <div class="flex items-center justify-center md:pl-6 md:justify-start h-20 border-b border-[#336699]/80 fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out">
+        <img src="images/png/correo.png" alt="Correo" class="w-8 h-6 md:w-9 md:h-7 mr-2" />
+        <span>hello@eabuencamino.com</span>
+      </div>
+
+      <!-- Dirección -->
+      <div class="flex items-center justify-center md:pl-6 md:justify-start h-20  fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out">
         <img src="images/png/direccion.png" alt="Dirección" class="w-6 h-9 md:w-7 md:h-10 mr-2" />
         <span>3539 THAXTON AVE SE - 87106, Albuquerque, NM</span>
       </div>
 
-      <!-- Correo -->
-      <div class="flex items-center justify-center md:pl-6 md:justify-start h-20 fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out">
-        <img src="images/png/correo.png" alt="Correo" class="w-8 h-6 md:w-9 md:h-7 mr-2" />
-        <span>hello@eabuencamino.com</span>
-      </div>
+      
     </div>
   </div>
 
@@ -580,7 +596,10 @@ style="">
     </a>
   </section>
 
-  <!-- Aquí vendrán las demás secciones: contenido, servicios, equipo, contacto... -->
+  <!-- Pie de pagina... -->
+<footer class="bg-[#336699] text-white text-center py-4 border-t border-[#F8F4E3]/80">
+  <p class="text-sm md:text-base font-medium">EaBuenCamino - 2025</p>
+</footer>
 
   <!-- JS -->
   <script src="js/main.js"></script>
