--- a/index.html
+++ b/index.html
@@ -569,10 +569,15 @@ class="w-full py-12 px-4 bg-cover bg-center"
       </div>
 
       <!-- Dirección -->
-      <div class="flex items-center justify-center md:pl-6 md:justify-start h-20  fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out">
+      <div class="flex items-center justify-center md:pl-6 md:justify-start h-20 fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out">
         <img src="images/png/direccion.png" alt="Dirección" class="w-6 h-9 md:w-7 md:h-10 mr-2" />
-        <span>3539 THAXTON AVE SE - 87106, Albuquerque, NM</span>
+        <span class="text-center md:text-left"> 
+         3539 THAXTON AVE SE 
+          <br class="block md:hidden" />
+         - 87106, Albuquerque, NM
+        </span>
       </div>
+
 
       
     </div>
