adicion de boton a seccion team

--- a/index.html
+++ b/index.html
@@ -467,12 +467,12 @@ class="w-full py-12 px-4 bg-cover bg-center"
 </section>
 
 <!-- ****** -->
-<section class="w-full bg-[#336699] py-16 px-4">
+<section class="w-full bg-[#336699] py-16 px-4 mt-4">
   <!-- Título -->
   <h2 class="text-center text-white text-3xl font-semibold mb-12">Team</h2>
 
   <!-- Grid del equipo -->
-  <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 text-white">
+  <div class="max-w-6xl mx-auto w-[80%] grid grid-cols-1 md:grid-cols-2 gap-10 text-white">
 
     <!-- Tarjeta 1 -->
     <div class="flex items-start gap-4">
@@ -481,28 +481,38 @@ class="w-full py-12 px-4 bg-cover bg-center"
         Photo Diana
       </div>
       <!-- Info -->
-      <div class="flex flex-col justify-between">
+      <div class="flex flex-col gap-2">
         <h3 class="text-lg font-semibold">Diana Hernandez</h3>
-        <p class="text-sm mt-2">
+        <p class="text-sm">
           Lorem ipsum is simply dummy text of the printing and typesetting industry.
         </p>
-        <div class="w-12 h-2 bg-[#E3BE03] mt-4 rounded-full"></div>
+        <a 
+          href="#about" 
+          class="inline-block bg-[#E3BE03] text-[#336699] text-sm font-semibold px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
+        >
+          Leer más
+        </a>
       </div>
     </div>
 
     <!-- Tarjeta 2 -->
     <div class="flex items-start gap-4 flex-row-reverse text-right">
       <!-- Imagen -->
-      <div class="w-24 h-24 bg-gray-200 rounded-tr-[30px] rounded-bl-[30px] flex items-center justify-center text-sm text-gray-500">
+      <div class="w-24 h-24 bg-gray-200 rounded-tl-[30px] rounded-br-[30px] flex items-center justify-center text-sm text-gray-500">
         Photo Jorge
       </div>
       <!-- Info -->
-      <div class="flex flex-col justify-between">
+      <div class="flex flex-col gap-2 items-end">
         <h3 class="text-lg font-semibold">Jorge Brozicevich</h3>
-        <p class="text-sm mt-2">
+        <p class="text-sm">
           Lorem ipsum is simply dummy text of the printing and typesetting industry.
         </p>
-        <div class="w-12 h-2 bg-[#E3BE03] mt-4 ml-auto rounded-full"></div>
+        <a 
+          href="#about" 
+          class="inline-block bg-[#E3BE03] text-[#336699] text-sm font-semibold px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
+        >
+          Leer más
+        </a>
       </div>
     </div>
 
@@ -513,17 +523,23 @@ class="w-full py-12 px-4 bg-cover bg-center"
         Photo Fidel
       </div>
       <!-- Info -->
-      <div class="flex flex-col justify-between">
+      <div class="flex flex-col gap-2">
         <h3 class="text-lg font-semibold">Fidel Ramirez Ortiz</h3>
-        <p class="text-sm mt-2">
+        <p class="text-sm">
           Lorem ipsum is simply dummy text of the printing and typesetting industry.
         </p>
-        <div class="w-12 h-2 bg-[#E3BE03] mt-4 rounded-full"></div>
+        <a 
+          href="#about" 
+          class="inline-block bg-[#E3BE03] text-[#336699] text-sm font-semibold px-3 py-1 rounded-full hover:bg-yellow-400 transition whitespace-nowrap"
+        >
+          Leer más
+        </a>
       </div>
     </div>
 
   </div>
 </section>
+
 
 
 <section class="relative w-full bg-[#E3BE03] py-20 overflow-hidden">
@@ -572,9 +588,9 @@ class="w-full py-12 px-4 bg-cover bg-center"
       <div class="flex items-center justify-center md:pl-6 md:justify-start h-20 fade-on-scroll opacity-0 translate-y-4 transition-all duration-700 ease-out">
         <img src="images/png/direccion.png" alt="Dirección" class="w-6 h-9 md:w-7 md:h-10 mr-2" />
         <span class="text-center md:text-left"> 
-         3539 THAXTON AVE SE 
+         3539 THAXTON AVE SE - 
           <br class="block md:hidden" />
-         - 87106, Albuquerque, NM
+         87106, Albuquerque, NM
         </span>
       </div>
 
